HW/k8s/k8s-rbac/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-t-m1
  namespace: test
  labels: 
    name: nginx-t-m1
spec:
  selector:
    matchLabels:
      name: nginx-t-m1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: nginx-t-m1
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          command: ["/bin/sh", "-c"]
          args: ["sleep infinity"]
        - name: nginx-t-m1
          image: nginx
          ports:
          - containerPort: 80
            name: web
          volumeMounts:
          - name: config-volume1
            mountPath: /usr/share/nginx/html
      volumes:
        - name: config-volume1
          configMap:
            # Provide the name of the ConfigMap containing the files you want
            # to add to the container
            name: nginx-m1
