HW/k8s/k8s-rbac/ingress-tls.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: test
spec:
  selector:
    name: nginx-t-m1
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
  namespace: test
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myapp.example.com
    secretName: testsecret-tls
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
